--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "helmet": "^8.1.0",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "sharp": "^0.34.3",
