--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.ts",
+    "start": "node dist/server.js",
     "dev": "nodemon",
     "build": "tsc",
     "prod": "ts-node ./src/server.ts",
@@ -29,9 +29,9 @@
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.1",
     "multer": "^2.0.2",
-    "sharp": "^0.34.3",
+    "sharp": "^0.34.4",
     "string-similarity-js": "^2.1.4",
     "tesseract.js": "^6.0.1",
     "uuid": "^11.1.0",
