--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,19 +1,27 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "baseUrl": "src",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "rootDir": "./src",
+    "outDir": "./dist",
+    "baseUrl": "./src",
+
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "removeComments": true,
-    "outDir": "dist",
-    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
+
     "resolveJsonModule": true,
-    "types": ["node", "express"],
+    "sourceMap": true,
+    "removeComments": true,
     "noImplicitAny": true
+
+    /* 
+      🔑 Note: no "types": ["node", "express"]
+      → This way, TypeScript will automatically pick up 
+        @types/node and @types/express when installed.
+    */
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
